fix logout click (z-index)

--- a/style.css
+++ b/style.css
@@ -1053,6 +1053,11 @@ body.collections-page {
   font-size: 18px;
   color: white;
 }
+.user-box {
+  position: relative;
+  z-index: 9999;
+}
+
 #logoutBtn {
   position: relative;
   z-index: 9999;
